# pygmh-mrb

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pygmh_mrb/: adapter.py  handle.py
pygmh_mrb_test/assets/: __init__.py
pygmh_mrb_test/assets/simple/: Segment_1.part.npy  lymph node.part.npy
pygmh_mrb_test/functional/: test_adapter.py
